# local-ai-server-v3

./: .gitignore  INTEGRATION_REPORT.md  build.gradle  gradle.properties  gradlew  settings.gradle
.github/workflows/: android-build.yml  build.yml
app/: build.gradle
app/schemas/com.localai.server.data.local.ChatDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/localai/server/: App.kt  MainActivity.kt
app/src/main/java/com/localai/server/data/local/: ChatDatabase.kt
app/src/main/java/com/localai/server/data/local/dao/: ConversationDao.kt  MessageDao.kt
app/src/main/java/com/localai/server/data/local/entity/: Conversation.kt  Message.kt
app/src/main/java/com/localai/server/data/repository/: AIRepositoryImpl.kt  ChatApiService.kt  ChatRepository.kt  ChatRepositoryImpl.kt
app/src/main/java/com/localai/server/di/: AppModule.kt
app/src/main/java/com/localai/server/domain/model/: AIModel.kt
app/src/main/java/com/localai/server/domain/repository/: AIRepository.kt
app/src/main/java/com/localai/server/engine/: LlamaEngine.kt  LlamaEngine.kt.bak
app/src/main/java/com/localai/server/service/: AIService.kt
app/src/main/java/com/localai/server/ui/chat/: ChatActivity.kt  ChatViewModel.kt  ConversationAdapter.kt  MessageAdapter.kt
app/src/main/java/com/localai/server/ui/main/: MainViewModel.kt
app/src/main/res/drawable/: bg_message_assistant.xml  bg_message_user.xml
app/src/main/res/layout/: activity_chat.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
